--- a/neurodebian1604-r2017a/Dockerfile
+++ b/neurodebian1604-r2017a/Dockerfile
@@ -7,7 +7,7 @@
 # See http://www.mathworks.com/products/compiler/mcr/ for more info.
 
 #FROM ubuntu-debootstrap:trusty
-FROM neurodebian:trusty
+FROM neurodebian:xenial
 
 # Install the MCR dependencies and some things we'll need and download the MCR
 # from Mathworks -silently install it
@@ -26,8 +26,11 @@ RUN apt-get -qq update && apt-get -qq install -y \
     cd / && \
     rm -rf mcr-install
 
+RUN apt-get install libstdc++6
+
 # Configure environment variables for MCR
-ENV LD_LIBRARY_PATH /opt/mcr/v92/runtime/glnxa64:/opt/mcr/v92/bin/glnxa64:/opt/mcr/v92/sys/os/glnxa64
+#ENV LD_LIBRARY_PATH /opt/mcr/v92/runtime/glnxa64:/opt/mcr/v92/bin/glnxa64:/opt/mcr/v92/sys/os/glnxa64
+ENV LD_LIBRARY_PATH /opt/mcr/v92/runtime/glnxa64:/opt/mcr/v92/bin/glnxa64
 ENV XAPPLRESDIR /opt/mcr/v92/X11/app-defaults
 
 
