added a few singularity specific RUN

--- a/neurodebian1604-r2017a/Dockerfile
+++ b/neurodebian1604-r2017a/Dockerfile
@@ -11,11 +11,7 @@ FROM neurodebian:xenial
 
 # Install the MCR dependencies and some things we'll need and download the MCR
 # from Mathworks -silently install it
-RUN apt-get -qq update && apt-get -qq install -y \
-    unzip \
-    xorg \
-    wget \
-    curl && \
+RUN apt-get -qq update && apt-get -qq install -y unzip xorg wget curl libstdc++6 && \
     mkdir /mcr-install && \
     mkdir /opt/mcr && \
     cd /mcr-install && \
@@ -26,11 +22,12 @@ RUN apt-get -qq update && apt-get -qq install -y \
     cd / && \
     rm -rf mcr-install
 
-RUN apt-get install libstdc++6
-
 # Configure environment variables for MCR
-#ENV LD_LIBRARY_PATH /opt/mcr/v92/runtime/glnxa64:/opt/mcr/v92/bin/glnxa64:/opt/mcr/v92/sys/os/glnxa64
 ENV LD_LIBRARY_PATH /opt/mcr/v92/runtime/glnxa64:/opt/mcr/v92/bin/glnxa64
 ENV XAPPLRESDIR /opt/mcr/v92/X11/app-defaults
 
+#for singularity
+RUN ldconfig
 
+#for singularity on hpc
+RUN mkdir -p /N/u /N/home /N/dc2 /N/soft
