added 2012b (used by freesurfer)

--- a/neurodebian1604-r2017a/Dockerfile
+++ b/neurodebian1604-r2017a/Dockerfile
@@ -22,6 +22,11 @@ RUN apt-get -qq update && apt-get -qq install -y unzip xorg wget curl libstdc++6
     cd / && \
     rm -rf mcr-install
 
+#for openmp (app-life uses it)
+RUN apt-get update && apt-get install -y libgomp1
+#for blas (nnls)
+RUN apt-get update && apt-get install -y libatlas-base-dev
+
 # Configure environment variables for MCR
 ENV LD_LIBRARY_PATH /opt/mcr/v92/runtime/glnxa64:/opt/mcr/v92/bin/glnxa64
 ENV XAPPLRESDIR /opt/mcr/v92/X11/app-defaults
